[gd_scene load_steps=3 format=3 uid="uid://3lvufu1gcvh2"]

[ext_resource type="Script" path="res://Common/Online/online_panel_ui.gd" id="1_ioukf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vecad"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="Online" type="CanvasLayer"]
script = ExtResource("1_ioukf")

[node name="MainMenu" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -77.0
offset_right = 163.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vecad")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Online panel
"

[node name="HostButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOST
"

[node name="JoinButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "JOIN
"

[node name="AddressField" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to join"

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
